# story-game

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  conf.py  pyproject.toml  serverless.yml  test.json
.github/workflows/: main.yml
api/: story.py
client/: __main__.py  exception.py  manage.py  request_processing.py
client/entities/: schemas.py
common/entities/: data_source.py  schemas.py
entities/: connection.py  data_source.py  schemas.py
src/: app.py  conf.py
src/api/: story.py
src/data_storage/: connection.py  data_source.py  validators.py
src/data_storage/dynamo_db/: data_source.py
src/data_storage/sqlalchemy/: data.sql  data_source.py  models.py
src/entities/: data_source.py
src/utilities/: exceptions.py  functools.py
tests/: conftest.py  constants.py  docker-compose.yml  helpers.py  test_data.json  test_data.sql  test_data_source.py  test_helpers.py  test_story_api.py
tests/data/: test_story_for_rds_driver.json
tests/integration/: test_story_api.py
tests/integration/test_json/: invalid_story_item_with_circle.json  valid_story_item.json
tests/unit/: test_functools.py  test_parse_story_structure.py  test_story.py  test_story_data_drivers.py  test_story_validation.py
tests/unit/test_json/: story_item_changed_default_root_node.json  story_item_with_group_unconnected_nodes.json  story_item_with_unconnected_node.json  story_item_with_unrelated_references.json  story_item_without_node_options.json  story_item_without_root_node.json  story_without_node_text.json  story_without_nodes.json  valid_story.json  valid_story_item.json
(+5 files in other folders)
