[tool.poetry]
name = "game-story"
version = "0.1.0"
description = ""
authors = ["andreyPromaster <and45.rew@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
Faker = "^9.3.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
