[tool.poetry]
name = "game-story"
version = "0.1.0"
description = ""
authors = ["andreyPromaster <and45.rew@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
boto3 = "^1.18.59"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
aiohttp = "^3.7.4"
alembic = "^1.7.5"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
Faker = "^9.3.1"
black = "^21.9b0"
pytest = "^6.2.5"
moto = "^2.2.10"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
